--- a/keptn-control-plane/helm/keptn-control-plane/charts/control-plane/templates/continuous-operations.yaml
+++ b/keptn-control-plane/helm/keptn-control-plane/charts/control-plane/templates/continuous-operations.yaml
@@ -45,7 +45,7 @@ spec:
             cpu: "500m"
         env:
           - name: EVENTBROKER
-            value: 'http://event-broker/keptn'
+            value: 'http://localhost:8081/event'
           - name: CONFIGURATION_SERVICE
             value: 'http://configuration-service:8080'
           - name: MONGODB_DATASTORE
@@ -60,13 +60,7 @@ spec:
         {{- include "control-plane.livenessProbe" . | nindent 8 }}
         ports:
           - containerPort: 8080
-        resources:
-          requests:
-            memory: "32Mi"
-            cpu: "50m"
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+        {{- include "keptn.distributor.resources" . | nindent 8 }}
         env:
           - name: PUBSUB_URL
             value: 'nats://keptn-nats-cluster'
