--- a/keptn-control-plane/helm/keptn-control-plane/charts/continuous-delivery/templates/continuous-deployment.yaml
+++ b/keptn-control-plane/helm/keptn-control-plane/charts/continuous-delivery/templates/continuous-deployment.yaml
@@ -8,8 +8,8 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/part-of: keptn-{{ .Release.Namespace }}
-    app.kubernetes.io/component: {{ include "control-plane.name" . }}
-    helm.sh/chart: {{ include "control-plane.chart" . }}
+    app.kubernetes.io/component: {{ include "continuous-delivery.name" . }}
+    helm.sh/chart: {{ include "continuous-delivery.chart" . }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
@@ -68,7 +68,7 @@ spec:
           {{- include "continuous-delivery.livenessProbe" . | nindent 10 }}
           imagePullPolicy: IfNotPresent
           ports:
-          - containerPort: 8080
+            - containerPort: 8080
           resources:
             requests:
               memory: "32Mi"
@@ -80,25 +80,19 @@ spec:
           - name: CONFIGURATION_SERVICE
             value: 'http://configuration-service:8080'
           - name: EVENTBROKER
-            value: 'http://event-broker/keptn'
+            value: 'http://localhost:8081/event'
         - name: distributor
           image: {{ .Values.distributor.image.repository }}:{{ .Values.distributor.image.tag | default .Chart.AppVersion }}
           {{- include "continuous-delivery.livenessProbe" . | nindent 10 }}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-          resources:
-            requests:
-              memory: "32Mi"
-              cpu: "50m"
-            limits:
-              memory: "128Mi"
-              cpu: "500m"
+          {{- include "keptn.distributor.resources" . | nindent 10 }}
           env:
             - name: PUBSUB_URL
               value: 'nats://keptn-nats-cluster'
             - name: PUBSUB_TOPIC
-              value: 'sh.keptn.events.evaluation-done,sh.keptn.event.approval.>'
+              value: 'sh.keptn.event.approval.>'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
 ---
@@ -131,9 +125,9 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/part-of: keptn-{{ .Release.Namespace }}
-    app.kubernetes.io/component: {{ include "control-plane.name" . }}
+    app.kubernetes.io/component: {{ include "continuous-delivery.name" . }}
     app.kubernetes.io/version: {{ .Values.helmService.image.tag | default .Chart.AppVersion }}
-    helm.sh/chart: {{ include "control-plane.chart" . }}
+    helm.sh/chart: {{ include "continuous-delivery.chart" . }}
 spec:
   selector:
     matchLabels:
@@ -147,14 +141,14 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/part-of: keptn-{{ .Release.Namespace }}
-        app.kubernetes.io/component: {{ include "control-plane.name" . }}
+        app.kubernetes.io/component: {{ include "continuous-delivery.name" . }}
         app.kubernetes.io/version: {{ .Values.helmService.image.tag | default .Chart.AppVersion }}
-        helm.sh/chart: {{ include "control-plane.chart" . }}
+        helm.sh/chart: {{ include "continuous-delivery.chart" . }}
     spec:
       containers:
         - name: helm-service
           image: {{ .Values.helmService.image.repository }}:{{ .Values.helmService.image.tag | default .Chart.AppVersion }}
-          {{- include "control-plane.livenessProbe" . | nindent 10 }}
+          {{- include "continuous-delivery.livenessProbe" . | nindent 10 }}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
@@ -169,13 +163,11 @@ spec:
             - name: CONFIGURATION_SERVICE
               value: 'http://configuration-service:8080'
             - name: EVENTBROKER
-              value: 'http://event-broker/keptn'
+              value: 'http://localhost:8081/event'
             - name: API
               value: 'ws://api-service:8080/websocket'
             - name: ENVIRONMENT
               value: 'production'
-            - name: PRE_WORKFLOW_ENGINE
-              value: 'true'
             - name: CANARY
               value: 'deployment'
             - name: INGRESS_HOSTNAME_SUFFIX
@@ -202,24 +194,24 @@ spec:
                   name: ingress-config
                   key: istio_gateway
                   optional: true
+            - name: HOSTNAME_TEMPLATE
+              valueFrom:
+                configMapKeyRef:
+                  name: ingress-config
+                  key: hostname_template
+                  optional: true
         - name: distributor
           image: {{ .Values.distributor.image.repository }}:{{ .Values.distributor.image.tag | default .Chart.AppVersion }}
-          {{- include "control-plane.livenessProbe" . | nindent 10 }}
+          {{- include "continuous-delivery.livenessProbe" . | nindent 10 }}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-          resources:
-            requests:
-              memory: "32Mi"
-              cpu: "50m"
-            limits:
-              memory: "128Mi"
-              cpu: "500m"
+          {{- include "keptn.distributor.resources" . | nindent 10 }}
           env:
             - name: PUBSUB_URL
               value: 'nats://keptn-nats-cluster'
             - name: PUBSUB_TOPIC
-              value: 'sh.keptn.internal.event.service.create,sh.keptn.event.configuration.change,sh.keptn.event.action.triggered,sh.keptn.internal.event.service.delete'
+              value: 'sh.keptn.event.service.create.finished,sh.keptn.event.deployment.triggered,sh.keptn.event.release.triggered,sh.keptn.event.action.triggered,sh.keptn.event.service.delete.finished'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
       serviceAccountName: keptn-helm-service
@@ -233,8 +225,8 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/part-of: keptn-{{ .Release.Namespace }}
-    app.kubernetes.io/component: {{ include "control-plane.name" . }}
-    helm.sh/chart: {{ include "control-plane.chart" . }}
+    app.kubernetes.io/component: {{ include "continuous-delivery.name" . }}
+    helm.sh/chart: {{ include "continuous-delivery.chart" . }}
 spec:
   ports:
     - port: 8080
@@ -280,30 +272,28 @@ spec:
           {{- include "continuous-delivery.livenessProbe" . | nindent 10 }}
           imagePullPolicy: IfNotPresent
           ports:
-          - containerPort: 8080
+            - containerPort: 8080
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "50m"
           env:
           - name: CONFIGURATION_SERVICE
             value: 'http://configuration-service:8080'
           - name: EVENTBROKER
-            value: 'http://event-broker/keptn'
+            value: 'http://localhost:8081/event'
         - name: distributor
           image: {{ .Values.distributor.image.repository }}:{{ .Values.distributor.image.tag | default .Chart.AppVersion }}
           {{- include "continuous-delivery.livenessProbe" . | nindent 10 }}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-          resources:
-            requests:
-              memory: "32Mi"
-              cpu: "50m"
-            limits:
-              memory: "128Mi"
-              cpu: "500m"
+          {{- include "keptn.distributor.resources" . | nindent 10 }}
           env:
             - name: PUBSUB_URL
               value: 'nats://keptn-nats-cluster'
             - name: PUBSUB_TOPIC
-              value: 'sh.keptn.events.deployment-finished'
+              value: 'sh.keptn.event.test.triggered'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
 ---
