--- a/keptn-control-plane/helm/keptn-control-plane/charts/control-plane/templates/quality-gates.yaml
+++ b/keptn-control-plane/helm/keptn-control-plane/charts/control-plane/templates/quality-gates.yaml
@@ -45,7 +45,7 @@ spec:
               cpu: "500m"
           env:
             - name: EVENTBROKER
-              value: 'http://event-broker/keptn'
+              value: 'http://localhost:8081/event'
             - name: CONFIGURATION_SERVICE
               value: 'http://configuration-service:8080'
             - name: MONGODB_DATASTORE
@@ -62,18 +62,12 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-          resources:
-            requests:
-              memory: "32Mi"
-              cpu: "50m"
-            limits:
-              memory: "128Mi"
-              cpu: "500m"
+          {{- include "keptn.distributor.resources" . | nindent 10 }}
           env:
             - name: PUBSUB_URL
               value: 'nats://keptn-nats-cluster'
             - name: PUBSUB_TOPIC
-              value: 'sh.keptn.>'
+              value: 'sh.keptn.event.evaluation.triggered,sh.keptn.event.get-sli.finished,sh.keptn.event.monitoring.configure'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
       serviceAccountName: keptn-lighthouse-service
